# T3CO_Go

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: index.md  installation.md  quick_start.md
installation/: index.html
quick_start/: index.html
search/: search_index.json
src/t3co_go/app/: t3co_app.py
src/t3co_go/app/pages/: visualize_results.py
src/t3co_go/cli/: run_t3co_go.py
tests/: test_methods.py  test_t3co_app.py
