[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "t3co_go"
version = "0.1.1"
dynamic = ["dependencies"]
description = """
A web-based dashboard for NREL's Transportation Technology Total Cost of Ownership (T3CO) tool
"""
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.9, <3.11"
authors = [
  {name = "Harish Panneer Selvam", email = "harish.panneerselvam@nrel.gov"},

]
maintainers = [
  {name = "NREL-AVCI", email = "T3CO@nrel.gov"}
]
keywords = ["tco", "vehicle-cost", "total-cost", "vehicle-simulation", "total-cost-of-ownership"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
Homepage = "https://www.nrel.gov/transportation/t3co.html"
Documentation = "https://nrel.github.io/T3CO_Go/"
Repository = "https://github.com/NREL/t3co_go"
"Bug Tracker" = "https://github.com/NREL/t3co_go/issues"

[project.scripts]
install_demo_inputs = "t3co_go.utilities.demo_files_installer:main"
run_t3co_go = "t3co_go.cli.run_t3co_go:main"

